kube/testing/lets-encrypt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: kuard
